@@ -100,11 +100,14 @@ _mpc8xx_allocBd(int len)
 
     bd = *nextBd;
     if ((bd < QUICC_BD_BASE) || (bd > QUICC_BD_END)) {
-        // Most likely not set up :-(
-        bd = *nextBd = QUICC_BD_BASE;
+        // Most likely not set up - make a guess :-(
+        bd = *nextBd = QUICC_BD_BASE+0x400;
     }
     len = (len + 7) & ~7;  // Multiple of 8 bytes
     *nextBd += len;
+    if (*nextBd >= QUICC_BD_END) {
+        *nextBd = QUICC_BD_BASE;
+    }
     return bd;
 }
 
